bug 322773: The prompt service asserts if there our window doesn't have a document. r+sr=bzbarsky